panama-src/genai/shims/ort_genai_c.h

typedef struct OgaResult OgaResult;
typedef struct OgaRuntimeSettings OgaRuntimeSettings;
typedef struct OgaConfig OgaConfig;
typedef struct OgaAudios OgaAudios;
typedef struct OgaStringArray OgaStringArray;
/**
 * \brief Register a callback function to receive log messages from the library. If invoked, the callback will override
 *        the previously set logging destination (e.g. a file or std::cerr).
 * \param[in] callback function pointer to the logging callback function (use nullptr to disable callback and revert to
 *                     the default logging destination - std::cerr).
 * \return OgaResult containing the error message when the callback could not be set, else nullptr.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaSetLogCallback(void (*callback)(const char* string, size_t length));
OGA_EXPORT OgaResult* OGA_API_CALL OgaLoadAudios(const OgaStringArray* audio_paths, OgaAudios** audios);
/**
 * \brief Load multiple audios from an array of byte buffers
 * \param[in] audio_data Array of byte buffers containing the audio data.
 * \param[in] audio_data_sizes Array of sizes of the byte buffers.
 * \param[in] count Number of audios to load.
 * \param[out] audios The loaded audios.
 * \return OgaResult containing the error message if the loading of the audios failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaLoadAudiosFromBuffers(const void** audio_data, const size_t* audio_data_sizes, size_t count, OgaAudios** audios);
OGA_EXPORT void OGA_API_CALL OgaDestroyAudios(OgaAudios* audios);
/**
 * \brief Creates a runtime settings instance to be used to create a model.
 * \param[out] out The created runtime settings.
 * \return OgaResult containing the error message if the creation of the runtime settings failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaCreateRuntimeSettings(OgaRuntimeSettings** out);
/**
 * \brief Destroys the given runtime settings.
 * \param[in] settings The runtime settings to be destroyed.
 */
OGA_EXPORT void OGA_API_CALL OgaDestroyRuntimeSettings(OgaRuntimeSettings* settings);
/**
 * \brief Sets a specific runtime handle for the runtime settings.
 * \param[in] settings The runtime settings to set the device type.
 * \param[in] handle_name The name of the handle to set for the runtime settings.
 * \param[in] handle The value of handle to set for the runtime settings.
 * \return OgaResult containing the error message if the setting of the device type failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaRuntimeSettingsSetHandle(OgaRuntimeSettings* settings, const char* handle_name, void* handle);
/**
 * \brief Creates an OgaConfig from the given configuration directory.
 * \param[in] config_path The path to the configuration directory. The path is expected to be encoded in UTF-8.
 * \param[out] out The created config.
 * \return OgaResult containing the error message if the creation of the config failed.
 */
OGA_EXPORT OgaResult* OGA_API_CALL OgaCreateConfig(const char* config_path, OgaConfig** out);