panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudios(const OgaStringArray *audio_paths, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudios(MemorySegment audio_paths, MemorySegment audios) {
        var mh$ = OgaLoadAudios.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadAudios", audio_paths, audios);
            }
            return (MemorySegment)mh$.invokeExact(audio_paths, audios);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaLoadAudiosFromBuffers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaLoadAudiosFromBuffers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudiosFromBuffers(const void **audio_data, const size_t *audio_data_sizes, size_t count, OgaAudios **audios)
     * }
     */
    public static FunctionDescriptor OgaLoadAudiosFromBuffers$descriptor() {
        return OgaLoadAudiosFromBuffers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudiosFromBuffers(const void **audio_data, const size_t *audio_data_sizes, size_t count, OgaAudios **audios)
     * }
     */
    public static MethodHandle OgaLoadAudiosFromBuffers$handle() {
        return OgaLoadAudiosFromBuffers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudiosFromBuffers(const void **audio_data, const size_t *audio_data_sizes, size_t count, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudiosFromBuffers$address() {
        return OgaLoadAudiosFromBuffers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaLoadAudiosFromBuffers(const void **audio_data, const size_t *audio_data_sizes, size_t count, OgaAudios **audios)
     * }
     */
    public static MemorySegment OgaLoadAudiosFromBuffers(MemorySegment audio_data, MemorySegment audio_data_sizes, long count, MemorySegment audios) {
        var mh$ = OgaLoadAudiosFromBuffers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaLoadAudiosFromBuffers", audio_data, audio_data_sizes, count, audios);
            }
            return (MemorySegment)mh$.invokeExact(audio_data, audio_data_sizes, count, audios);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyAudios {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyAudios");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyAudios(OgaAudios *audios)
     * }
     */
    public static FunctionDescriptor OgaDestroyAudios$descriptor() {
        return OgaDestroyAudios.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyAudios(OgaAudios *audios)
     * }
     */
    public static MethodHandle OgaDestroyAudios$handle() {
        return OgaDestroyAudios.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyAudios(OgaAudios *audios)
     * }
     */
    public static MemorySegment OgaDestroyAudios$address() {
        return OgaDestroyAudios.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyAudios(OgaAudios *audios)
     * }
     */
    public static void OgaDestroyAudios(MemorySegment audios) {
        var mh$ = OgaDestroyAudios.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyAudios", audios);
            }
            mh$.invokeExact(audios);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateRuntimeSettings {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateRuntimeSettings");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateRuntimeSettings(OgaRuntimeSettings **out)
     * }
     */
    public static FunctionDescriptor OgaCreateRuntimeSettings$descriptor() {
        return OgaCreateRuntimeSettings.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateRuntimeSettings(OgaRuntimeSettings **out)
     * }
     */
    public static MethodHandle OgaCreateRuntimeSettings$handle() {
        return OgaCreateRuntimeSettings.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateRuntimeSettings(OgaRuntimeSettings **out)
     * }
     */
    public static MemorySegment OgaCreateRuntimeSettings$address() {
        return OgaCreateRuntimeSettings.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateRuntimeSettings(OgaRuntimeSettings **out)
     * }
     */
    public static MemorySegment OgaCreateRuntimeSettings(MemorySegment out) {
        var mh$ = OgaCreateRuntimeSettings.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateRuntimeSettings", out);
            }
            return (MemorySegment)mh$.invokeExact(out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyRuntimeSettings {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyRuntimeSettings");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyRuntimeSettings(OgaRuntimeSettings *settings)
     * }
     */
    public static FunctionDescriptor OgaDestroyRuntimeSettings$descriptor() {
        return OgaDestroyRuntimeSettings.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyRuntimeSettings(OgaRuntimeSettings *settings)
     * }
     */
    public static MethodHandle OgaDestroyRuntimeSettings$handle() {
        return OgaDestroyRuntimeSettings.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyRuntimeSettings(OgaRuntimeSettings *settings)
     * }
     */
    public static MemorySegment OgaDestroyRuntimeSettings$address() {
        return OgaDestroyRuntimeSettings.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyRuntimeSettings(OgaRuntimeSettings *settings)
     * }
     */
    public static void OgaDestroyRuntimeSettings(MemorySegment settings) {
        var mh$ = OgaDestroyRuntimeSettings.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyRuntimeSettings", settings);
            }
            mh$.invokeExact(settings);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaRuntimeSettingsSetHandle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaRuntimeSettingsSetHandle");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaRuntimeSettingsSetHandle(OgaRuntimeSettings *settings, const char *handle_name, void *handle)
     * }
     */
    public static FunctionDescriptor OgaRuntimeSettingsSetHandle$descriptor() {
        return OgaRuntimeSettingsSetHandle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaRuntimeSettingsSetHandle(OgaRuntimeSettings *settings, const char *handle_name, void *handle)
     * }
     */
    public static MethodHandle OgaRuntimeSettingsSetHandle$handle() {
        return OgaRuntimeSettingsSetHandle.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaRuntimeSettingsSetHandle(OgaRuntimeSettings *settings, const char *handle_name, void *handle)
     * }
     */
    public static MemorySegment OgaRuntimeSettingsSetHandle$address() {
        return OgaRuntimeSettingsSetHandle.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaRuntimeSettingsSetHandle(OgaRuntimeSettings *settings, const char *handle_name, void *handle)
     * }
     */
    public static MemorySegment OgaRuntimeSettingsSetHandle(MemorySegment settings, MemorySegment handle_name, MemorySegment handle) {
        var mh$ = OgaRuntimeSettingsSetHandle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaRuntimeSettingsSetHandle", settings, handle_name, handle);
            }
            return (MemorySegment)mh$.invokeExact(settings, handle_name, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateConfig {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateConfig");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateConfig(const char *config_path, OgaConfig **out)
     * }
     */
    public static FunctionDescriptor OgaCreateConfig$descriptor() {
        return OgaCreateConfig.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateConfig(const char *config_path, OgaConfig **out)
     * }
     */
    public static MethodHandle OgaCreateConfig$handle() {
        return OgaCreateConfig.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateConfig(const char *config_path, OgaConfig **out)
     * }
     */
    public static MemorySegment OgaCreateConfig$address() {
        return OgaCreateConfig.ADDR;
    }
